# claude-vibe-squad

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json
.githooks/: pre-commit
_state/: capability-inventory-2026-05-02.md  dream-config.yaml  feed-config.yaml  incident-2026-05-03-claude-mcp-tilde.md  mcp-graduation-candidates.md  token-budget-2026-05-W2.md  upgrade-specialists-report-2026-05-02.md
chrono/: CLAUDE.md  SOUL.md  SPECIALIST-INDEX.md  current.md  operator-setup.md
daemon/: auth.py  circuit_breaker.py  control_plane.py  failover_watchdog.py  flash_summarizer.py  main.py  mcp_manager.py  requirements.txt  watcher.py
docs/: adding-a-specialist.md  adding-a-specialist.md.bak.20260713T002537Z  architecture.md  architecture.md.bak.20260713T002537Z  brain-map.md  capability-preservation-audit.md  file-disposition-manifest.md  git-hooks.md  model-runtime-map.md  private-config.md  production-readiness.md  roadmap.md  routing-map.html  runtime-routing-overlay.md  runtime-routing-test-results.md  state-model.md
examples/: active-tasks.sample.json
ink-app/: package-lock.json  package.json  tsconfig.json
launchd/: com.claudevibesquad.nightly.plist  com.vibesquad.chrome.plist  com.vibesquad.chrono-remote.plist  com.vibesquad.daemon.plist  com.vibesquad.transcription-cache-ttl.plist  com.vibesquad.weekly-review.plist
moat/: README.md  package-lock.json  package.json
model-lanes/: ROSTER.md  adapter-capability-policy.json  lane-capabilities.tsv  (+4 more)
(+846 files in other folders)
